--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Xike Zhang"
 title_separator          : "-"
 name                     : &name "Xike Zhang"
 description              : &description "Ph.D. Student at Huazhong University of Science and Technology"
-url                      : https://kokocheung.github.io/cv/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://kokocheung.github.io/cv # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "kokocheung.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -77,13 +77,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Dr. Test Account"
+  name             : "Xike Zhang"
   avatar           : "profile.png"
-  bio              : "Research scientist at Test University, expert in all things test and account related"
-  location         : "Test, California"
+  bio              : "Ph.D. Student at Huazhong University of Science and Technology"
+  location         : "Wuhan, Hubei"
   employer         : 
   googlescholar    : "http://scholar.google.com/this-is-a-test"
-  email            : 
+  email            : "koko@hust.edu.cn"
   uri              : 
   bitbucket        :
   codepen          :
@@ -97,7 +97,7 @@ author:
   instagram        : 
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/testaccount"
+  orcid            : "http://orcid.org/0000-0003-1777-0530"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
