--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Xike Zhang"
-  avatar           : "profile.png"
+  avatar           : "profile1.png"
   bio              : "Ph.D. Student at Huazhong University of Science and Technology"
   location         : "Wuhan, Hubei"
   employer         : 
@@ -91,7 +91,7 @@ author:
   flickr           :
   facebook         : 
   foursquare       :
-  github           : "getorg-testacct"
+  github           : "kokocheung"
   google_plus      :
   keybase          :
   instagram        : 
