--- a/_config.yml
+++ b/_config.yml
@@ -237,6 +237,14 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+   # _contact
+  - scope:
+      path: ""
+      type: contact
+    values:
+      layout: contact
+      author_profile: true
+      share: true
       
 # Sass/SCSS
 sass:
