--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,13 +13,16 @@ main:
     url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /teaching/   
+    
+  - title: "Skills"
+    url: /skills/ 
         
   - title: "Blog Posts"
     url: /year-archive/
          
-  - title: "CV"
-    url: /cv/   
+  #- title: "CV"
+  #  url: /cv/   
    
   - title: "Contact"
     url: /contact/
