--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ author:
   flickr           :
   facebook         : 
   foursquare       :
-  github           : "kokocheung"
+  github           : #"kokocheung"
   google_plus      :
   keybase          :
   instagram        : 
