--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Xike Zhang"
 title_separator          : "-"
 name                     : &name "Xike Zhang"
 description              : &description "Ph.D. Student at Huazhong University of Science and Technology"
-url                      : https://xikezhang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mysite.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "kokocheung/mysite.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
